# sigma-rule-deployment

./: .gitignore  .golangci.yml  CLAUDE.md  Dockerfile  Dockerfile.query-integration  GettingStarted.md  Makefile  README.md  action.sh  action.yml  entrypoint.sh  go.mod  go.sum  pyproject.toml  renovate.json
.github/: zizmor.yml
.github/.workflows/: unit-test-convert.yml
.github/ISSUE_TEMPLATE/: standard-issue.md
.github/scripts/: checkout-or-create-branch.sh  create-integration-test-pr.sh  create-verified-commit.sh  update-integration-main.sh
.github/workflows/: actionlint.yml  build-docker-fork-consume.yml  build-docker.yml  close-integration-test.yml  convert-integrate.yml  deploy.yml  hadolint.yml  sbom-immutable-release.yml  sbom-release.yml  shellcheck.yml  socket-export-sbom.yml  socket-sbom-export.yml  unit-test-convert.yml  unit-test.yml  validate-renovate.yml  zizmor.yml
actions/: Dockerfile  entrypoint.sh
actions/comment-sigma-results/: README.md  action.yml  comment.js
actions/convert/: README.md  action.yml  convert.py  main.py  pyproject.toml  settings.py  test_convert.py
actions/convert-docker/: action.yml
actions/deploy/: README.md  (+6 more)
config/: config-example-v2.yml  config-example.yml  convert-integrate-sigma.yml  deploy.yml  schema-v2.json  schema.json  sigma-convert.example.yml  sigma-deployer.example.yml  validate-config.yml  workflow-convert-integrate-sigma.yml  workflow-deploy.yml
integration-test/: config.yml  test.yml
query-integration/: action.yml
shared/: config.go  config_test.go  grafanahttp.go  util.go
test/: config.yml
(+76 files in other folders)
