[project]
name = "convert"
version = "0.1.0"
description = "Sigma CLI Conversion"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dynaconf>=3.2.12",
    "pysigma-backend-loki>=0.13.0",
    "pyyaml>=6.0.3",
    "sigma-cli>=2.0.0",
    "orjson>=3.11.0",
]

[dependency-groups]
dev = [
    "mypy>=1.19.0",
    "pytest>=9.0.0",
    "ruff>=0.14.0",
    "types-pyyaml>=6.0.12",
]

[tool.ruff]
exclude = ["dist", "build", "env", "venv", ".env", ".venv"]
line-length = 100

[tool.mypy]
exclude = ["dist", "build", "env", "venv", ".env", ".venv"]
ignore_missing_imports = true
explicit_package_bases = true
